log
Thu 16 May 2024 06:40:13 PM UTC: 
 tests:  0|5
total_score: 0/70
ff4b083
Thu 16 May 2024 07:01:10 PM UTC: 
 sudoku.c | 42 +++++++++++++++++++++++++++++-------------
 1 file changed, 29 insertions(+), 13 deletions(-)
 tests:  1|5
total_score: 5/70
a88a993
Thu 16 May 2024 07:06:14 PM UTC: 
 sudoku.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
ae32a0d
Thu 16 May 2024 07:28:22 PM UTC: 
 sudoku.c | 42 ++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 42 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:89:54: error: invalid type argument of ‘->’ (have ‘int’)
   89 |                         if (m != row && n != col && n->sudo[m][n] == data)
      |                                                      ^~
Compilation failed
c8fefa7
Thu 16 May 2024 07:32:53 PM UTC: 
 sudoku.c | 38 ++++----------------------------------
 1 file changed, 4 insertions(+), 34 deletions(-)
 tests:  2|4
total_score: 15/70
eac1b7d
Thu 16 May 2024 07:38:24 PM UTC: 
 sudoku.c | 33 +++++++++++++++++++++++++++++----
 1 file changed, 29 insertions(+), 4 deletions(-)
 tests:  2|4
total_score: 15/70
42b6ce2
Thu 16 May 2024 07:43:25 PM UTC: 
 sudoku.c | 63 ++++++++++++++++++++++++++++++++++++++++++++++-----------------
 1 file changed, 46 insertions(+), 17 deletions(-)
 tests:  5|3
total_score: 35/70
96f4a32
Thu 16 May 2024 07:43:38 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
8fb6f7e
Thu 16 May 2024 07:44:02 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
e0a0e63
